# autoform

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  README.md  pyproject.toml  test_examples.py
.github/workflows/: ci.yml  colab-badges.yml  publish.yml
autoform/: __init__.py  ad.py  analysis.py  axes.py  batch.py  checkpoint.py  control.py  core.py  custom.py  dce.py  effects.py  evaluation.py  harvest.py  inference.py  intercept.py  intercepts.py  lm.py  memoize.py  optims.py  pp.py  scheduling.py  schema.py  schemas.py  string.py  surgery.py  utils.py
autoform/transforms/: __init__.py  ad.py  batch.py  harvest.py
docs/: Makefile  api.md  conf.py  index.md  internals.ipynb  internals.py  iterative_refinement.py  quickstart.md
docs/_ext/: simple_mermaid.py
docs/_static/: custom.css
docs/examples/: chain_of_thought.ipynb  internals.ipynb  internals.py  iterative_refinement.ipynb  iterative_refinement.py  multi_agent_debate.ipynb
docs/tutorials/: 00_quickstart.ipynb
examples/: research_and_write.py  semantic_backprop.py
tests/: __init__.py  conftest.py  test_analysis.py  test_axes.py  test_batch.py  test_checkpoint.py  test_checkpoint_integration.py  test_custom.py  test_dce.py  test_dedup.py  test_effects.py  test_fold.py  test_format.py  test_inference.py  test_intercept.py  test_intercepts.py  test_ir.py  test_ir_call_fixes.py  test_iterate_until.py  test_kwargs.py  test_lm_schema.py  test_match.py  test_memoize.py  test_nested_transforms.py  test_pretty.py  test_primitives.py  test_readme_examples.py  test_repr.py  test_rules_mapping.py  test_scheduling.py  test_schema.py  test_sow_reap.py  test_split_merge.py  test_staging.py  test_string_match.py  test_struct.py  test_switch.py  test_trace_ir_programs.py  test_while_loop.py
