[project]
name = "autoform"
version = "0.0.1"
description = "Composable function transformations for LLM programs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.80.9",
    "optree>=0.18.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]


[tool.ruff]
preview = true
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unresolved-import = "ignore"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "autoform"]
